@@ -1,107 +1,91 @@
 package ru.yandex.practicum.filmorate.service;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import ru.yandex.practicum.filmorate.exceptions.ConditionsNotMetException;
+import ru.yandex.practicum.filmorate.dto.UserCreateDto;
+import ru.yandex.practicum.filmorate.dto.UserResponseDto;
+import ru.yandex.practicum.filmorate.dto.UserUpdateDto;
+import ru.yandex.practicum.filmorate.dto.mapper.UserMapper;
 import ru.yandex.practicum.filmorate.exceptions.NotFoundException;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.util.Collection;
-import java.util.HashSet;
-import java.util.Optional;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class UserService {
     private final UserStorage userStorage;
 
-    @Autowired
-    public UserService(UserStorage userStorage) {
-        this.userStorage = userStorage;
+    public UserResponseDto createUser(UserCreateDto dto) {
+        User user = UserMapper.toUser(dto);
+        return UserMapper.toResponse(userStorage.create(user));
     }
 
-    public User createUser(User user) {
-        return userStorage.create(user);
-    }
-
-    public User updateUser(User updatedUser) {
-        if (updatedUser.getId() == null) {
-            log.error("ID is null");
-            throw new ConditionsNotMetException("Invalid ID", "id", updatedUser.getId());
+    public UserResponseDto updateUser(UserUpdateDto dto) {
+        if (dto.getId() == null) {
+            throw new NotFoundException("User id must not be null");
         }
-
-        var optionalUser = userStorage.getById(updatedUser.getId());
-
-        optionalUser.ifPresentOrElse(
-                user -> {
-                    if (!updatedUser.getEmail().equals(user.getEmail()) && userStorage.emailExists(updatedUser.getEmail())) {
-                        log.error("Duplicate email {}", user.getEmail());
-                        throw new ConditionsNotMetException("Email already exists", "email", updatedUser.getEmail());
-                    }
-                },
-                () -> {
-                    log.error("User with id {} does not exist", updatedUser.getId());
-                    throw new NotFoundException("User with id " + updatedUser.getId() + " does not exist");
-                }
-        );
-
-        return userStorage.update(updatedUser.getId(), updatedUser);
+        if (!userStorage.existsById(dto.getId())) {
+            throw new NotFoundException("User with id " + dto.getId() + " does not exist");
+        }
+        User user = UserMapper.toUser(dto);
+        return UserMapper.toResponse(userStorage.update(dto.getId(), user));
     }
 
-    public Optional<User> getUserById(Long id) {
-        return userStorage.getById(id);
+    public UserResponseDto getUserById(Long id) {
+        User user = userStorage.getById(id)
+                .orElseThrow(() -> new NotFoundException("User with id " + id + " not found"));
+        return UserMapper.toResponse(user);
     }
 
-    public Collection<User> getAllUsers() {
-        return userStorage.getAllUsers();
+    public Collection<UserResponseDto> getAllUsers() {
+        return userStorage.getAllUsers().stream()
+                .map(UserMapper::toResponse)
+                .collect(Collectors.toList());
     }
 
     public void addFriend(Long userId, Long friendId) {
-        User user1 = userStorage.getById(userId)
-                .orElseThrow(() -> new NotFoundException("User with id " + userId + " does not exist"));
-        User user2 = userStorage.getById(friendId)
-                .orElseThrow(() -> new NotFoundException("User with id " + friendId + " does not exist"));
-
-        user1.getFriends().add(friendId);
-        user2.getFriends().add(userId);
+        if (!userStorage.existsById(userId)) {
+            throw new NotFoundException("User with id " + userId + " does not exist");
+        }
+        if (!userStorage.existsById(friendId)) {
+            throw new NotFoundException("User with id " + friendId + " does not exist");
+        }
+        userStorage.addFriend(userId, friendId);
     }
 
-    public Collection<User> getFriends(Long userId) {
-        User user = userStorage.getById(userId)
-                .orElseThrow(() -> new NotFoundException("User with id " + userId + " does not exist"));
-
-        return user.getFriends().stream()
-                .map(userStorage::getById)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .toList();
+    public Collection<UserResponseDto> getFriends(Long userId) {
+        if (!userStorage.existsById(userId)) {
+            throw new NotFoundException("User with id " + userId + " does not exist");
+        }
+        return userStorage.getFriends(userId).stream()
+                .map(UserMapper::toResponse)
+                .collect(Collectors.toList());
     }
 
-    public Collection<User> getCommonFriends(Long userId, Long otherId) {
-        User user1 = userStorage.getById(userId)
-                .orElseThrow(() -> new NotFoundException("User with id " + userId + " does not exist"));
-        User user2 = userStorage.getById(otherId)
-                .orElseThrow(() -> new NotFoundException("User with id " + otherId + " does not exist"));
-
-        Set<Long> commonFriendIds = new HashSet<>(user1.getFriends());
-        commonFriendIds.retainAll(user2.getFriends());
-        return commonFriendIds.stream()
-                .map(userStorage::getById)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .toList();
+    public Collection<UserResponseDto> getCommonFriends(Long userId, Long otherId) {
+        if (!userStorage.existsById(userId)) {
+            throw new NotFoundException("User with id " + userId + " does not exist");
+        }
+        if (!userStorage.existsById(otherId)) {
+            throw new NotFoundException("User with id " + otherId + " does not exist");
+        }
+        return userStorage.getCommonFriends(userId, otherId).stream()
+                .map(UserMapper::toResponse)
+                .collect(Collectors.toList());
     }
 
     public void removeFriend(Long userId, Long friendId) {
-        User user1 = userStorage.getById(userId)
-                .orElseThrow(() -> new NotFoundException("User with id " + userId + " does not exist"));
-        User user2 = userStorage.getById(friendId)
-                .orElseThrow(() -> new NotFoundException("User with id " + friendId + " does not exist"));
-
-        user1.getFriends().remove(friendId);
-        user2.getFriends().remove(userId);
+        if (!userStorage.existsById(userId)) {
+            throw new NotFoundException("User with id " + userId + " does not exist");
+        }
+        if (!userStorage.existsById(friendId)) {
+            throw new NotFoundException("User with id " + friendId + " does not exist");
+        }
+        userStorage.removeFriend(userId, friendId);
     }
 }
